# datashare-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/datashare_mcp/: __main__.py  client.py  config.py  errors.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_errors.py  test_resources.py  test_tools.py
tests/live/: test_smoke.py
